--- a/app/roon-web-api/package.json
+++ b/app/roon-web-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nihilux/roon-web-api",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "private": true,
   "main": "bin/app.js",
   "license": "MIT",
@@ -10,12 +10,14 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "start": "yarn run clean &&NODE_ENV=development&&LOG_LEVEL=debug&&yarn webpack --watch",
+    "start:prod": "yarn run clean &&NODE_ENV=production&&NODE_OPTIONS='--trace-deprecation'&&LOG_LEVEL=info&&yarn webpack --watch",
     "test": "jest"
   },
   "dependencies": {
     "@fastify/compress": "8.0.1",
     "@fastify/static": "8.0.3",
     "@gquittet/graceful-server": "4.0.9",
+    "dotenv": "^16.4.7",
     "fastify": "5.2.0",
     "fastify-plugin": "5.0.1",
     "fastify-sse-v2": "4.2.1",
@@ -26,6 +28,7 @@
     "node-roon-api-settings": "github:roonlabs/node-roon-api-settings",
     "node-roon-api-status": "github:roonlabs/node-roon-api-status",
     "node-roon-api-transport": "github:roonlabs/node-roon-api-transport",
+    "openai": "^4.77.0",
     "rxjs": "7.8.1",
     "ts-retry-promise": "0.8.1",
     "tslib": "2.8.1"
