--- a/app/roon-web-ng-client/package.json
+++ b/app/roon-web-ng-client/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@nihilux/roon-web-ng-client",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:prod": "ng serve --host=0.0.0.0",
     "build": "ng lint && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --coverage",
@@ -22,8 +23,10 @@
     "@angular/platform-browser-dynamic": "19.0.4",
     "@nihilux/roon-web-client": "workspace:*",
     "fast-equals": "5.0.1",
+    "hammerjs": "^2.0.8",
     "nanoid": "3.3.8",
     "ngx-device-detector": "9.0.0",
+    "ngx-markdown": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "2.8.1"
   },
@@ -42,6 +45,7 @@
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "9.17.0",
     "@nihilux/roon-web-model": "workspace:*",
+    "@types/hammerjs": "^2",
     "@types/jest": "29.5.14",
     "@types/node": "22.10.2",
     "@typescript-eslint/eslint-plugin": "8.18.1",
