--- a/app/roon-web-api/package.json
+++ b/app/roon-web-api/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nihilux/roon-web-api",
-  "version": "0.0.14",
+  "name": "@djehring/roon-web-api",
+  "version": "0.0.16",
   "private": true,
   "main": "bin/app.js",
   "license": "MIT",
@@ -34,10 +34,10 @@
     "tslib": "2.8.1"
   },
   "devDependencies": {
+    "@djehring/roon-web-model": "workspace:*",
     "@eslint/compat": "1.2.4",
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "9.17.0",
-    "@nihilux/roon-web-model": "workspace:*",
     "@types/jest": "29.5.14",
     "@types/node": "22.10.2",
     "@typescript-eslint/eslint-plugin": "8.18.1",
