--- a/app/roon-web-ng-client/package.json
+++ b/app/roon-web-ng-client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nihilux/roon-web-ng-client",
-  "version": "0.0.14",
+  "name": "@djehring/roon-web-ng-client",
+  "version": "0.0.16",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,7 +21,7 @@
     "@angular/material": "19.0.3",
     "@angular/platform-browser": "19.0.4",
     "@angular/platform-browser-dynamic": "19.0.4",
-    "@nihilux/roon-web-client": "workspace:*",
+    "@djehring/roon-web-client": "workspace:*",
     "fast-equals": "5.0.1",
     "hammerjs": "^2.0.8",
     "nanoid": "3.3.8",
@@ -41,10 +41,10 @@
     "@angular/cdk": "19.0.3",
     "@angular/cli": "19.0.5",
     "@angular/compiler-cli": "19.0.4",
+    "@djehring/roon-web-model": "workspace:*",
     "@eslint/compat": "1.2.4",
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "9.17.0",
-    "@nihilux/roon-web-model": "workspace:*",
     "@types/hammerjs": "^2",
     "@types/jest": "29.5.14",
     "@types/node": "22.10.2",
