--- a/packages/roon-web-client/package.json
+++ b/packages/roon-web-client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nihilux/roon-web-client",
-  "version": "0.0.14",
+  "name": "@djehring/roon-web-client",
+  "version": "0.0.16",
   "main": "bin/roon-web-client.js",
   "typings": "bin/src/index.d.ts",
   "license": "MIT",
@@ -24,10 +24,10 @@
     "tslib": "2.8.1"
   },
   "devDependencies": {
+    "@djehring/roon-web-model": "workspace:*",
     "@eslint/compat": "1.2.4",
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "9.17.0",
-    "@nihilux/roon-web-model": "workspace:*",
     "@types/jest": "29.5.14",
     "@typescript-eslint/eslint-plugin": "8.18.1",
     "@typescript-eslint/parser": "8.18.1",
