--- a/app/roon-web-api/package.json
+++ b/app/roon-web-api/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "@fastify/compress": "8.0.1",
+    "@fastify/multipart": "^9.0.1",
     "@fastify/static": "8.0.3",
     "@gquittet/graceful-server": "4.0.9",
+    "@types/fastify-multipart": "^0.7.2",
     "dotenv": "^16.4.7",
     "fastify": "5.2.0",
     "fastify-plugin": "5.0.1",
