Enhance Web App Branding and PWA Support
- Update favicon generation with comprehensive multi-size and multi-format support
- Implement new PWA configuration with improved manifest and service worker settings
- Redesign application icons with a consistent visual identity
- Add scripts for dynamic favicon and test icon generation
- Update index.html with enhanced meta tags and web app capabilities
- Rename application to "Roon AI" with updated branding

--- a/app/roon-web-ng-client/angular.json
+++ b/app/roon-web-ng-client/angular.json
@@ -32,7 +32,12 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "src/assets/favicons",
+                "output": "/assets/favicons"
+              }
             ],
             "styles": [
               "src/styles.scss"
