--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@angular/pwa": "^19.1.8",
     "@types/potrace": "^2",
     "@types/to-ico": "^1",
+    "pino-pretty": "^13.0.0",
     "potrace": "^2.1.8",
     "sharp": "^0.33.2",
     "svgo": "^3.3.2",
