--- a/app/roon-web-api/package.json
+++ b/app/roon-web-api/package.json
@@ -9,8 +9,8 @@
     "clean": "rimraf bin",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "start": "yarn run clean &&NODE_ENV=development&&LOG_LEVEL=debug&&yarn webpack --watch",
-    "start:prod": "yarn run clean &&NODE_ENV=production&&NODE_OPTIONS='--trace-deprecation'&&LOG_LEVEL=info&&yarn webpack --watch",
+    "start": "kill-port 3443 && yarn run clean && cross-env NODE_ENV=development LOG_LEVEL=debug yarn webpack --watch | pino-pretty",
+    "start:prod": "kill-port 3443 && yarn run clean && cross-env NODE_ENV=production NODE_OPTIONS='--trace-deprecation' LOG_LEVEL=info yarn webpack --watch | pino-pretty",
     "test": "jest"
   },
   "dependencies": {
@@ -44,6 +44,7 @@
     "@types/node": "22.10.2",
     "@typescript-eslint/eslint-plugin": "8.18.1",
     "@typescript-eslint/parser": "8.18.1",
+    "cross-env": "^7.0.3",
     "eslint": "9.17.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-config-standard": "17.1.0",
@@ -57,7 +58,9 @@
     "globals": "15.13.0",
     "jest": "29.7.0",
     "jest-junit": "16.0.0",
+    "kill-port": "^2.0.1",
     "nodemon-webpack-plugin": "4.8.2",
+    "pino-pretty": "^10.3.1",
     "prettier": "3.4.2",
     "rimraf": "6.0.1",
     "ts-jest": "29.2.5",
