Refactor Roon Library Browse with New Utility Function
- Extract browseIntoLibrary function in roon-utils
- Add comprehensive test suite for new library browse method
- Improve error handling and logging for library navigation
- Simplify client-tracks-manager library browsing logic
- Update package scripts with improved NODE_OPTIONS

--- a/app/roon-web-api/package.json
+++ b/app/roon-web-api/package.json
@@ -9,8 +9,8 @@
     "clean": "rimraf bin",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "start": "kill-port 3443 && yarn run clean && cross-env NODE_ENV=development LOG_LEVEL=debug yarn webpack --watch | pino-pretty",
-    "start:prod": "kill-port 3443 && yarn run clean && cross-env NODE_ENV=production NODE_OPTIONS='--trace-deprecation' LOG_LEVEL=info yarn webpack --watch | pino-pretty",
+    "start:debug": "kill-port 3443 && yarn run clean && cross-env NODE_ENV=development NODE_OPTIONS='--no-deprecation' LOG_LEVEL=debug yarn webpack --watch | pino-pretty",
+    "start:prod": "kill-port 3443 && yarn run clean && cross-env NODE_ENV=production NODE_OPTIONS='--no-deprecation' LOG_LEVEL=info yarn webpack --watch | pino-pretty",
     "test": "jest"
   },
   "dependencies": {
