Refactor Track Search Strategy and String Normalization
- Optimize track search algorithm with more intelligent search variations
- Enhance string normalization to remove "The" prefix from artist names
- Simplify and improve search term generation for better track matching
- Remove redundant search methods and consolidate search logic
- Update string-utils with improved artist name normalization
- Add comprehensive test cases for artist name normalization

--- a/app/roon-web-api/package.json
+++ b/app/roon-web-api/package.json
@@ -10,10 +10,10 @@
     "clean": "rimraf bin",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "kill-ports": "kill-port 3000 3443 || true",
-    "start:debug": "yarn kill-ports && sleep 1 && yarn run clean && cross-env NODE_ENV=development NODE_OPTIONS='--no-deprecation' LOG_LEVEL=debug yarn webpack --watch | pino-pretty",
-    "start:prod": "yarn kill-ports && sleep 1 && yarn run clean && cross-env NODE_ENV=production NODE_OPTIONS='--no-deprecation' LOG_LEVEL=info yarn webpack --watch | pino-pretty",
-    "debug": "yarn build:debug && yarn kill-ports && sleep 1 && cross-env NODE_ENV=development LOG_LEVEL=debug node --inspect bin/app.js | pino-pretty",
+    "kill-ports": "kill-port 3000 || true && kill-port 3443 || true",
+    "start:debug": "cross-env NODE_ENV=development NODE_OPTIONS='--no-deprecation' LOG_LEVEL=debug yarn webpack --watch | pino-pretty",
+    "start:prod": "cross-env NODE_ENV=production NODE_OPTIONS='--no-deprecation' LOG_LEVEL=info yarn webpack --watch | pino-pretty",
+    "debug": "yarn build:debug && cross-env NODE_ENV=development LOG_LEVEL=debug node --inspect bin/app.js | pino-pretty",
     "test": "jest"
   },
   "dependencies": {
