fix(ios): correct home screen launch and favicon handling
- Fix web manifest scope/start_url so iOS web clips open the app instead of /assets/favicons/
- Redirect /assets/favicons/ to favicon.ico to avoid 404 noise
- Add port mapping to keep existing :4200 shortcut working
- Adjust Docker build to produce bin/app.js reliably

--- a/app/roon-web-api/Dockerfile
+++ b/app/roon-web-api/Dockerfile
@@ -3,11 +3,9 @@ ARG TARGETPLATFORM=linux/amd64
 
 FROM node:22-alpine${ALPINE_VERSION} AS builder
 RUN apk add --no-cache git
-RUN mkdir -p /usr/src/roon-web-stack
 WORKDIR /usr/src/roon-web-stack
-COPY . /usr/src/roon-web-stack
-RUN corepack enable yarn && \
-    yarn workspaces focus @djehring/roon-web-api --production
+COPY . .
+RUN corepack enable yarn && yarn install && yarn build
 
 FROM alpine:${ALPINE_VERSION}
 WORKDIR /usr/src/app
