chore(security): ignore local TLS certs
- Ignore cert PEMs under certs/
- Remove previously tracked localhost cert/key from git
- Generate a self-signed cert in the Docker image so HTTPS works without committed keys

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ config.json
 /app/roon-web-api/data
 /roon-backend.tar
 /roon-web-app.tar
+
+# Local dev TLS certs (never commit private keys)
+/certs/*.pem
